# rsomics-fragment-size

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: paired_pe.bam
