[package]
name = "rsomics-fragment-size"
version = "0.1.0"
description = "Paired-end insert-size distribution from a BAM: histogram TSV + summary with ATAC nucleosome fractions"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-fragment-size"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-fragment-size"
path = "src/main.rs"

[lib]
name = "rsomics_fragment_size"
path = "src/lib.rs"

doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-bamio = { version = "0.1.7" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"
serde_json = "1"

[[bench]]
name = "bench"
harness = false

